fix: add width: 100% to #home-map to prevent x-axis layout shift

--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -34,6 +34,7 @@ object {
   bottom: 0; */
   // max-width: 800px;
 
+  width: 100%;
   height: 300px;
   border-radius: 10px;
 }
